--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="container-fluid">
+    <br/>
+    <div class="jumbotron">
+        <h1 class="display-4">Hello! HOME</h1>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" [routerLink]="['/login']" role="button">Voltar ao Login </a>
+        </p>
+    </div>
+</div>
