--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <mz-navbar>
+	<a [routerLink]="['/home']">Página Inicial</a>
 	<mz-navbar-item-container [align]="'right'">
-		<mz-navbar-item><a>Entrar</a></mz-navbar-item>
-		<mz-navbar-item><a>Registrar</a></mz-navbar-item>
+		<mz-navbar-item><a *ngIf="!tokenAuthService.userSignedIn()" [routerLink]="['/login']">Entrar</a></mz-navbar-item>
+		<mz-navbar-item><a *ngIf="!tokenAuthService.userSignedIn()" [routerLink]="['/register']">Registrar</a></mz-navbar-item>
 
-		<mz-navbar-item><a>Perfil</a></mz-navbar-item>
-		<mz-navbar-item><a>Sair</a></mz-navbar-item>
+		<mz-navbar-item *ngIf="tokenAuthService.userSignedIn()"></mz-navbar-item>
+		<mz-navbar-item *ngIf="tokenAuthService.userSignedIn()"><a (click)="tokenAuthService.signOut()">Sair</a></mz-navbar-item>
 	</mz-navbar-item-container>
 </mz-navbar>
