Redirecionando para homepage após signIn e signUp

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
     <br/>
     <div class="jumbotron">
-        <h1 class="display-4">Hello! HOME</h1>
+        <h2 class="display-4">Bem vindo:</h2>
+        <h4 class="display-4">alo alo</h4>
         <p class="lead">
             <a class="btn btn-primary btn-lg" [routerLink]="['/login']" role="button">Voltar ao Login </a>
         </p>
