--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,8 @@
 <mz-navbar>
-	<a [routerLink]="['/home']">Página Inicial</a>
+	<a [routerLink]="['/home']"><strong>Página Inicial</strong></a>
 	<mz-navbar-item-container [align]="'right'">
-		<mz-navbar-item><a *ngIf="!tokenAuthService.userSignedIn()" [routerLink]="['/login']">Entrar</a></mz-navbar-item>
-		<mz-navbar-item><a *ngIf="!tokenAuthService.userSignedIn()" [routerLink]="['/register']">Registrar</a></mz-navbar-item>
-
-		<mz-navbar-item *ngIf="tokenAuthService.userSignedIn()"></mz-navbar-item>
-		<mz-navbar-item *ngIf="tokenAuthService.userSignedIn()"><a (click)="tokenAuthService.signOut()">Sair</a></mz-navbar-item>
+		<mz-navbar-item><a *ngIf="!tokenAuthService.userSignedIn()" [routerLink]="['/login']"><strong>Entrar</strong></a></mz-navbar-item>
+		<mz-navbar-item><a *ngIf="!tokenAuthService.userSignedIn()" [routerLink]="['/register']"><strong>Registrar</strong></a></mz-navbar-item>
+		<mz-navbar-item><a *ngIf="tokenAuthService.userSignedIn()" (click)="tokenAuthService.signOut()"><strong>Sair</strong></a></mz-navbar-item>
 	</mz-navbar-item-container>
 </mz-navbar>
