--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)="onSignUpSubmit()" #f="ngForm" novalidate>
 	<div class="section">
-		<h6>Registrar</h6>
+		<h4>Registrar</h4>
 		<div class="row">
 			<div class="input-field col s12 m6">
 				<input id="email" name="email" type="email" required [(ngModel)]="signUpUser.email">
@@ -13,7 +13,7 @@
 			</div>
 			<div class="input-field col s12 m6">
 				<input id="password_confirmation" name="password_confirmation" type="password" required [(ngModel)]="signUpUser.passwordConfirmation">
-				 <span *ngIf="signUpUser.password != signUpUser.passwordConfirmation">
+				 <span *ngIf="signUpUser.password != signUpUser.passwordConfirmation" style="color:red">
 					Digite corretamente a senha
 				</span>
 				<label for="email">Confirme sua senha</label>
